[memory] Restore correct spacing between launcher buttons.
This adds back the (proportionally correct) spacing of 12px between the
buttons in the launcher view (the buttons themselves have 2px padding
already, which is why the container only needs a gap of 8px).

Screenshot: https://i.imgur.com/xfRFcon.png
Fixed: b:41496454
Bug: b:1456677
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5358998
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/profiler/profileLauncherView.css
+++ b/front_end/panels/profiler/profileLauncherView.css
@@ -116,6 +116,7 @@
 
 .profile-launcher-buttons {
   flex-wrap: wrap;
+  column-gap: 8px;
 }
 
 @media (forced-colors: active) {
